# NEXUS

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml
bs_map/: albedo_opendap.py
cmake/: FindNetCDF.cmake
config/cmaq/: HEMCO_Config.rc  HEMCO_sa_Diagn.rc  HEMCO_sa_Grid.CONUS.rc  HEMCO_sa_Grid.global.rc  HEMCO_sa_Grid.rc  HEMCO_sa_Spec.rc  HEMCO_sa_Time.rc  NEXUS_Config.rc
config/cmaq_gfs_megan/: HEMCO_sa_Diagn.rc  HEMCO_sa_Spec.rc  HEMCO_sa_Time.rc  NEXUS_Config.rc  NEXUS_Config.rc~
config/cmaq_gfs_megan_nei2019/: NEXUS_Config.rc
config/cmaq_gfs_megan_nei2019_globtempo/: NEXUS_Config.rc
config/cmaq_nei2019/: NEXUS_Config.rc
config/cmaq_nei2019_globtempo/: NEXUS_Config.rc
config/gocart/: HEMCO_sa_Diagn.rc  HEMCO_sa_Spec.rc  HEMCO_sa_Time.rc  NEXUS_Config.rc
config/megan/: HEMCO_sa_Diagn.rc  HEMCO_sa_Spec.rc  HEMCO_sa_Time.rc  NEXUS_Config.rc
fix/: grid_spec_C401.nc
modulefiles/: hera.intel  orion.intel  ufs_common.lua  ufs_derecho.intel.lua  ufs_gaea.intel.lua  ufs_hera.intel.lua  ufs_hera.intelllvm.lua  ufs_hercules.intel.lua  ufs_hercules.intelllvm.lua  ufs_linux.gnu  ufs_linux.intel  ufs_orion.intel.lua  ufs_wcoss2.intel.lua  wcoss_cray  wcoss_dell_p3
src/: CMakeLists.txt  cap.F90  nexus_driver.F90  nexus_error_mod.F90  nexus_methods_mod.F90
src/nuopc/: CMakeLists.txt  app.F90  cap.F90  driver.F90
utils/: combine-ant-bio.py  combine_ant_bio.py  hemco_root_parser.py  hemco_time_parser.py  hemco_time_parser.py~  run_nco_combine_ant_bio.sh  run_nexus_hera.ksh  run_nexus_hera.sh
utils/python/: #nexus_root_parser.py#  combine_tiles.py  concatenate_nexus_post_split.py  concatenate_nexus_post_split_pretty.py  make_nexus_output_pretty.py  make_nexus_output_pretty_2.py  make_nexus_output_pretty_old.py  nexus_gfs_bio.py  nexus_nei2016_control_tilefix.py  nexus_nei2016_linker.py  nexus_nei2016_linker.py~  nexus_nei2019_control_tilefix.py  nexus_nei2019_linker.py  nexus_root_parser.py  nexus_root_parser.py~  nexus_time_parser.py  nexus_time_parser.py~
utils/scripts/: runjob_hera.sh  runjob_tiles_hera.sh
